# ConsoleSnake

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: border.cpp.E56D39AEF3128E50.idx  border.hpp.640F8E5D4CA57AEC.idx  game.cpp.71CA38254A0916B6.idx  game.hpp.6F1338E265D5519A.idx  input.cpp.99834A70B8D7B72F.idx  input.hpp.786F4F4181A41686.idx  main.cpp.3EA69F7FFB05819B.idx  menu.cpp.FCDE2DF7AFE36EA2.idx
src/: game.cpp  game.hpp  input.cpp  input.hpp  main.cpp  menu.cpp  menu.hpp
